<resources>
    <string name="app_name">Pessoa Fisica</string>
    <string name="textCpf">CPF</string>
    <string name="textNome">Nome</string>
    <string name="textIdade">Idade</string>
    <string name="textTelefone">Telefone</string>
    <string name="textEmail">E-mail</string>
    <string name="btnInseriDadosCadastro">Cadastrar</string>
    <string name="btnListarRegistrosCadastro">Registros</string>
    <string name="btnVoltarCadastro">Voltar</string>
    <string name="btnCadastrarPrincipal">Cadastrar</string>
    <string name="btnAbrirLista">Exibir Cadastros</string>
</resources>
